ingress1/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-A-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-A
  template:
    metadata:
      labels:
        app: service-A
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-A
spec:
  selector:
    app: service-A
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
